Project Proyecto_Final {
  database_type: 'PostgreSQL'
  Note: 'Web platform that helps mobile repair'
}

Table administradores {
  id integer [pk, unique, not null, increment, Note: 'Identificador unico para el administrador']
  nombres varchar(60) [not null, Note: 'Nombre o nombres del administrador']
  apellidos varchar(60) [not null, Note: 'Apellidos del administrador']
  fecha_nacimiento date [not null, Note: 'Fecha de nacimiento del administrador en formato: yyyy-mm-dd']
  telefono varchar(13) [not null, Note: 'Número de telefono del administrador']
  email varchar(30) [not null, Note: 'Email del administrador']
  Note: 'Tabla que contiene la información de los administradores'
}

Table tecnicos {
  id integer [pk, unique, not null, increment, Note: 'Identificador unico para el tecnico']
  nombres varchar(60) [not null, Note: 'Nombre o nombres del técnico']
  apellidos varchar(60) [not null, Note: 'Apellidos del técnico']
  fecha_nacimiento date [not null, Note: 'Fecha de nacimiento del administrador en formato: yyyy-mm-dd']
  telefono varchar(13) [not null, Note: 'Número del telefono del técnico']
  activo boolean [not null, default: true, Note: 'Indicador del estado activo o inactivo del técnico']
  email varchar(30) [not null, Note: 'Email del tecnico']
  Note: 'Tabla que contiene la información de los técnicos'
}

Table clientes {
  id integer [pk, unique, not null, increment, Note: 'Identificador unico para el cliente']
  nombres varchar(60) [not null, Note: 'Nombre o nombres del cliente']
  apellidos varchar(60) [not null, Note: 'Apellidos del cliente']
  fecha_nacimiento date [not null, Note: 'Fecha de nacimiento del cliente en formato: yyyy-mm-dd']
  telefono varchar(13) [not null, Note: 'Número del telefono del cliente']
  domicilio varchar(100) [not null, Note: 'Domicilio del cliente']
  email varchar(30) [not null, Note: 'Email del cliente']
  activo boolean [not null, default: true, Note: 'Indicador del estado activo o inactivo del cliente']
  Note: 'Tabla que contiene la información de los clientes'
}

Table dispostivos {
  imei varchar(15) [pk, unique, not null, Note: 'Código imei del dispositivo que será usado como identificador unico']
  modelo varchar(30) [not null, Note: 'Modelo del dispositivo']
  marca varchar(30) [not null, Note: 'Marca del dispositivo']
  numero_serie varchar(60) [not null, Note: 'Número de serie del dispositivo']
  id_cliente integer [not null, Note: 'Identificador del cliente que llevó el dispositivo']
  Note: 'Tabla que contiene la información de los dispositivos'
}

Table manual_reparaciones {
  id integer [pk, unique, not null, increment, Note: 'Identificador unico para la reparación']
  titulo varchar(100) [not null, Note: 'Titulo de la reparación']
  contenido text [not null, Note: 'Contenido en HTML de la reparación']
  Note: 'Tabla que contiene el titulo y contenido del manual de reparaciones'
}

Table bitacoras {
  id integer [pk, unique, not null, increment, Note: 'Identificador unico para la bitacora']
  imei_dispositivo integer [not null, Note: 'Imei del dispositivo de la bitacora']
  fecha_salida date [Note: 'Fecha de la salida del dispositivo en formato yyyy-mm-dd']
  costo double [Note: 'Costo final de la reparación']
  fecha_recibido date [not null, Note: 'Fecha en la que entró la bitacora al sistema en formato: yyyy-mm-dd']
  notas text [Note: 'Notas opcionales sobre la reparación']
  terminado boolean [not null, default: false, Note: 'Indicador de terminado de la bitacora']
  reparado boolean [not null, default: false, Note: 'Indicador de si el dispositivo se pudo terminar de la bitacora']
  Note: 'Tabla que contiene la información de las bitacoras'
}

Table reparaciones_bitacoras {
  id integer [pk, unique, not null, increment, Note: 'Identificador unico de la relación entre reparaciones y bitacoras']
  id_reparacion integer [not null, Note: 'Identificador de la reparación']
  id_bitacora integer [not null, Note: 'Identificador de la bitacora']
  Note: 'Tabla para la relación entre las reparaciones y bitacoras'
}

Table tecnicos_bitacoras {
  id integer [pk, unique, not null, increment, Note: 'Identificador unido de la relación entre tecnicos y bitacoras']
  id_tecnico integer [not null, Note: 'Identificador del tecnico']
  id_bitacora integer [not null, Note: 'Identificador de la bitacoras']
  Note: 'Tabla para la relación de tecnicos y bitacoras'
}

Ref: bitacoras.imei_dispositivo > dispostivos.imei [delete: restrict]

Ref: reparaciones_bitacoras.id_reparacion > manual_reparaciones.id [delete: restrict]

Ref: reparaciones_bitacoras.id_bitacora > bitacoras.id [delete: restrict]

Ref: tecnicos_bitacoras.id_tecnico > tecnicos.id [delete: restrict]

Ref: tecnicos_bitacoras.id_bitacora > bitacoras.id [delete: restrict]

Ref: dispostivos.id_cliente > clientes.id [delete: restrict]